--- a/LABS/Lab 8/In Lab/Q1.md
+++ b/LABS/Lab 8/In Lab/Q1.md
@@ -52,5 +52,69 @@ int main(int argc, char *argv[])
 # b)
 
 ```c
+#include <pthread.h>
+#include <stdio.h>
+#include <stdlib.h>
 
+#define SIZE 10000000
+#define THREADS 10
+#define PIECE (SIZE / THREADS)
+
+float *A;
+float *B;
+float *C;
+
+typedef struct {
+    int start;
+    int end;
+} ThreadData;
+
+void *addThreads(void *arg) {
+    ThreadData *data = (ThreadData *)arg;
+    int start = data->start;
+    int end = data->end;
+
+    for (int i = start; i < end; i++) {
+        C[i] = A[i] + B[i];
+    }
+
+    return NULL;
+}
+
+int main(int argc, char *argv[]) {
+    A = (float *)malloc(SIZE * sizeof(float));
+    B = (float *)malloc(SIZE * sizeof(float));
+    C = (float *)malloc(SIZE * sizeof(float));
+
+    for (int i = 0; i < SIZE; i++) {
+        A[i] = (float)i;
+        B[i] = (float)i;
+    }
+
+    pthread_t thread[THREADS];
+    ThreadData data[THREADS];
+
+    for (int i = 0; i < THREADS; i++) {
+        data[i].start = i * PIECE;
+        data[i].end = (i == THREADS - 1) ? SIZE : (i + 1) * PIECE;
+        pthread_create(&thread[i], NULL, addThreads, (void *)&data[i]);
+    }
+
+    for (int i = 0; i < THREADS; i++) {
+        pthread_join(thread[i], NULL);
+    }
+
+    for (int i = 0; i < 10; i++) {
+        printf("Value of C[%d]: %f\n", i, C[i]);
+    }
+
+    free(A);
+    free(B);
+    free(C);
+
+    return 0;
+}
 ```
+
+# OUTPUT:
+![image](https://github.com/user-attachments/assets/c39bd341-fc6f-4406-8576-9c2cbc0ad889)
